fix hover effect for wrap-title-and-description div to include padding

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,21 +158,40 @@ div.wrap-title-and-description {
   p.description {
     margin: 0;
   }
-
 }
 
 div.wrap-is-public {
-  padding: .5rem 2rem 2rem 2rem;
+  padding: .5rem 2rem 1rem 2rem;
   background-color: rgba(250,250,250,0.7);
-  font-size: 1rem;
+  font-size: 5rem;
+
+  p.description {
+    margin: 0;
+  }
 }
 
-// ul.grid-groups li:hover a {
-//   display: inline-block;
-//   width: 100%;
-//   background-color: rgba(20, 130, 133, 0.4);
-// }
+div.wrap-title-and-description:hover a {
+  display: inline-block;
+  width: 100%;
+}
 
+div.wrap-title-and-description:hover {
+  display: inline-block;
+  width: 100%;
+  background-color: rgba(20, 130, 133, 0.4);
+}
+
+
+div.wrap-is-public:hover a {
+  display: inline-block;
+  width: 100%;
+}
+
+div.wrap-is-public:hover {
+  display: inline-block;
+  width: 100%;
+  background-color: rgba(20, 130, 133, 0.4);
+}
 
 .display-groups {
   font-family: sans-serif;
